<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Naijainlove</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- DRAWER BEGINS -->

    <string name="ME">ME</string>
    <string name="MyProfile">My Profile</string>
    <string name="Photos">Photos</string>
    <string name="Messages">Messages</string>
    <string name="Friends">Friends</string>
    <string name="Logout">Logout</string>
    
    <string name="DiveIn">DIVE IN</string>
    <string name="TopUsers">Top Users</string>
    <string name="NewUsers">New Users</string>
    <string name="OnlineUsers">OnlineUsers</string>
 	<string name="MemberLookUp">Member LookUp</string>
    <!-- DRAWER END -->
    
    <!-- HEADER ONLINE USERS  -->
    <string name="ActionSearch">Search</string>
    <string name="DisplayOption">View As</string>
    <string name="ViewAsTile">View As Tile</string>
    <string name="ViewAsList">View As List</string>
    
    <!-- SIGNIN BEGIN -->
  	 <string name="uname_not_matching">Authorization Required. Invalid email/password combination.</string>
      <!-- SIGNIN END -->
    
        <string name="logut_alert">Do you really want to logout?</string>
</resources>